--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,9 @@
 
       <div class="trigger">
         {% for my_page in site.pages %}
-          {% if my_page.title %}
+          {% if my_page.title == '42dinous' %}
+          <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">Blog</a>
+          {% elsif my_page.title %}
           <a class="page-link" href="{{ my_page.url | prepend: site.baseurl }}">{{ my_page.title }}</a>
           {% endif %}
         {% endfor %}
