--- a/css/main.scss
+++ b/css/main.scss
@@ -16,8 +16,8 @@ $base-line-height: 1.5;
 $spacing-unit:     30px;
 
 $text-color:       #111;
-$background-color: #ffffff;
-$brand-color:      #2a7ae2;
+$background-color: #FAF9FA;
+$brand-color:      #2a7ae2; 
 
 $grey-color:       #828282;
 $grey-color-light: lighten($grey-color, 40%);
