--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -38,6 +38,7 @@
           </li>
         {% endif %}
         </ul>
+        Template Credits: <a href="http://martiansideofthemoon.github.io/">Martian</a>
       </div>
       
       
